--- a/pages/login.html
+++ b/pages/login.html
@@ -110,7 +110,7 @@
                 localStorage.setItem('email', email);
 
             try {
-                const response = await fetch("http://localhost:5000/users");
+                const response = await fetch("/users");
                 if (!response.ok) throw new Error("Network response was not ok");
 
                 const users = await response.json();
