--- a/pages/profile.user.html
+++ b/pages/profile.user.html
@@ -119,7 +119,7 @@
             }
 
             try {
-                const response = await fetch("http://localhost:5000/update-password", {
+                const response = await fetch("/update-password", {
                     method: "PUT",
                     headers: {
                         "Content-Type": "application/json",
@@ -146,7 +146,7 @@
         // Fetch and display financial data
         async function fetchFinancialData() {
             try {
-                const response = await fetch("http://localhost:5000/users");
+                const response = await fetch("/users");
                 if (!response.ok) throw new Error("Network response was not ok");
                 
                 const users = await response.json();
@@ -233,7 +233,7 @@
 
         async function notificationGotting() {
             try {
-                const response = await fetch("http://localhost:5000/users");
+                const response = await fetch("/users");
                 if (!response.ok) throw new Error("Network response was not ok");
                 const users = await response.json();
                 const gymHouse = users.find(gym => gym.email === email);
