--- a/pages/notification.user.html
+++ b/pages/notification.user.html
@@ -48,7 +48,7 @@
 
 async function notificationGotting() {
     try {
-        const response = await fetch("http://localhost:5000/users");
+        const response = await fetch("/users");
         if (!response.ok) throw new Error("Network response was not ok");
 
         const users = await response.json(); // Fetch users
