Updated scan problem

--- a/pages/setting.user.html
+++ b/pages/setting.user.html
@@ -41,7 +41,7 @@
                     <p>change Language</p>
                 </div>
             </div>
-            <div class="attendance_linker"><a href="/scan"><img src="../images/qrcode_playful-basbousa-4f91af.netlify.app.png" alt=""><p class="qr_forattendance_pwa">Scan or click this QR code</p></a></div>
+            <div class="attendance_linker"><a href="/scan/"><img src="../images/qrcode_playful-basbousa-4f91af.netlify.app.png" alt=""><p class="qr_forattendance_pwa">Scan or click this QR code</p></a></div>
             <div class="membership-container">
                 <div class="membership-box" id="basic">
                     <h3>Basic Plan</h3>
