--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <a href="#contact">Contact</a>
                     </nav>
                     <div class="act_btns">
-                        <a href="./images/YouCut_20240427_100903211.mp4" class="video_btn"><p>video</p></a>
+                        <a href="./images/howtoVideo.mp4" class="video_btn"><p>video</p></a>
                         <a href="./pages/choose_price.user.html" class="login_act"><p>sign up</p></a>
                     </div>
                 </header>
@@ -83,12 +83,12 @@
             <p class="txt_1">Simple steps to use...</p>
             <div>
                 <video autoplay muted loop playsinline>
-                    <source src="./images/YouCut_20240427_100903211.mp4" type="video/mp4">
+                    <source src="./images/howtoVideo.mp4" type="video/mp4">
                     <span>watch</span>
                 </video>
                 <p class="howtoText">Learn how to use our platform effortlessly. Watch the detailed video tutorial for a complete walkthrough, or click the personal assistant button for instant help. Follow simple, step-by-step instructions to explore all features, manage tasks efficiently, and get the best experience tailored to your needs.</p>
             </div>
-            <a class="personal_assistant_btn" href=""><p>personal assistant</p></a>
+            <a class="personal_assistant_btn" href="tel:0978787960"><p>personal assistant</p></a>
         </div>
         <div class="testimonials">
             <h2>What Our Clients Say</h2>
@@ -130,7 +130,7 @@
             <p class="txt_1"><section style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
                 font-size: 35px;
                 font-weight: 600;
-                color: #333333;">Affordable Plans</section>
+                color: #6d5fb49c;">Affordable Plans</section>
             <section style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             font-size: 18px;
             margin-top: 15px;
@@ -141,11 +141,16 @@
                     <p class="price_amount">2,000.00 <span>/month</span></p>
                     <h2>Introductory</h2>
                     <ul>
-                        <li>Dashboard Dispaly</li>
-                        <li>User Registration</li>
-                        <li>Finance Calculation/ Weekly</li>
-                        <li>Attendance Checking/ manually</li>
-                        <li>Fast Login</li>
+                        <li>Add and manage unlimited gym members</li>
+                        <li>View users' info in table format</li>
+                        <li>Edit user data (e.g. age, weight, etc.)</li>
+                        <li>QR code check-in</li>
+                        <li>Daily attendance tracking</li>
+                        <li>View present/absent status</li>
+                        <li>Record daily income and expenses</li>
+                        <li>Automatic revenue calculation (daily, weekly, monthly)</li>
+                        <li>Basic financial summary (no charts)</li>
+                        <li>Clean and modern user interface</li>
                         <li style="visibility: hidden;"></li>
                     </ul>
                     <div href="" class="subscription_btn" onclick="price1()"><p>Buy Plan</p></div>
@@ -154,13 +159,18 @@
                     <p class="price_amount">5,316.00 <span>/month</span></p>
                     <h2>Advanced</h2>
                     <ul>
-                        <li>Unlimited Financial service</li>
-                        <li>Full Dashboard</li>
-                        <li>Digital Marketing</li>
-                        <li>Customization</li>
-                        <li>Customer Nutration</li>
-                        <li>Unlimited SMS/Email</li>
-                        <li>Daily Attendance</li>
+                        <li>Visual attendance charts and trends</li>
+                        <li>Graph-based financial performance analysis</li>
+                        <li>Alerts for negative financial results</li>
+                        <li>Personalized nutrition suggestions</li>
+                        <li>Calculate calories and nutrition needs</li>
+                        <li>Local food trends considered</li>
+                        <li>Daily nutrition emails ans SMS to users</li>
+                        <li>Custom workout scheduling for users</li>
+                        <li>Suggest exercises based on daily performance</li>
+                        <li>Track calories burned and fitness progress</li>
+                        <li>Email alerts for payments and workout reminders</li>
+                        <li>Marketing Support (Basic)</li>
                     </ul>
                     <div href="" class="subscription_btn" onclick="price2()"><p>Buy Plan</p></div>
                 </div>
@@ -168,12 +178,12 @@
                     <p class="price_amount">11,000.9 <span>/month</span></p>
                     <h2> Platinum</h2>
                     <ul>
-                        <li>service 1</li>
-                        <li>service 2</li>
-                        <li>service 3</li>
-                        <li>service 4</li>
-                        <li>service 5</li>
-                        <li>service 6</li>
+                        <li>Custom graphic design services for gym promotions</li>
+                        <li>Full marketing strategy tailored to your gym</li>
+                        <li>Access to 24/7 marketing assistant</li>
+                        <li>SMS reminders for payments and workout motivation</li>
+                        <li>Daily nutrition tips via SMS and email</li>
+                        <li> Social Media Management</li>
                     </ul>
                     <div href="" class="subscription_btn" onclick="price3()"><p>Buy Plan</p></div>
                 </div>
@@ -238,7 +248,6 @@
         const response = await fetch("/users");
         if (!response.ok) throw new Error("Network response was not ok");
         const users = await response.json();
-        users.forEach(user => console.log(user.name));
         
         function animateCounter(element, target, interval) {
             let currentNumber = 0;
