update contact_us of pay page

--- a/pages/pleasePayPage.html
+++ b/pages/pleasePayPage.html
@@ -11,7 +11,7 @@
         <p class="text1">Dear Customer Please Pay Your Bill First !</p>
         <p class="text2">scan the QR code below using your phone and you can pay easily.</p>
         <img src="../images/qrcode_playful-basbousa-4f91af.netlify.app.png" alt="" class="qr_code">
-        <a href="" class="needHelp"><div>?</div><p>Contact Us</p></a>
+        <a href="tel:0978787960" class="needHelp"><div>?</div><p>Contact Us</p></a>
     </div>
 </body>
 </html>
