payment and some other little things are commited

--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
                         <li>Automatic revenue calculation (daily, weekly, monthly)</li>
                         <li>Basic financial summary (no charts)</li>
                         <li>Clean and modern user interface</li>
+                        <li>Email alerts for payments and workout reminders</li>
                         <li style="visibility: hidden;"></li>
                     </ul>
                     <div href="" class="subscription_btn" onclick="price1()"><p>Buy Plan</p></div>
@@ -169,7 +170,6 @@
                         <li>Custom workout scheduling for users</li>
                         <li>Suggest exercises based on daily performance</li>
                         <li>Track calories burned and fitness progress</li>
-                        <li>Email alerts for payments and workout reminders</li>
                         <li>Marketing Support (Basic)</li>
                     </ul>
                     <div href="" class="subscription_btn" onclick="price2()"><p>Buy Plan</p></div>
@@ -194,27 +194,28 @@
                 <div class="column">
                     <div class="logo_buttom">Gymnify</div>
                     <div class="social_media">
-                        <a href=""><i class="fa-brands fa-instagram"></i></a>
-                        <a href=""><i class="fa-brands fa-telegram"></i></a>
-                        <a href=""><i class="fa-brands fa-facebook"></i></a>
-                        <a href=""><i class="fa-brands fa-tiktok"></i></a>
+                        <a href="https://www.instagram.com/gymnify.app?igsh=ZWZvMDVoMmYweTM1"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://t.me/Gymnify"><i class="fa-brands fa-telegram"></i></a>
+                        <a href="https://www.facebook.com/share/15g6bfeguN/"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://www.tiktok.com/@gimnify.app?_t=ZM-8yCyRtTJPlj&_r=1"><i class="fa-brands fa-tiktok"></i></a>
                         <a href=""><i class="fa-brands fa-x-twitter"></i></a>
                     </div>
                 </div>
                 <div class="column">
                     <nav>
                         <p class="nav">Navigation</p>
-                        <a href="">Home</a>
-                        <a href="">Service</a>
-                        <a href="">Price</a>
-                        <a href="">Signup</a>
+                        <a href="#home">Home</a>
+                        <a href="#service">Service</a>
+                        <a href="#price_plan">Price</a>
+                        <a href="./pages//signUp_darkMood.user.html">Signup</a>
                     </nav>
                 </div>
                 <div class="column">
                     <div class="quick">
                         <p class="quick_cont">Quick contact</p>
-                        <a href="">+251978787960</a>
-                        <a href="">gimnifyapp@gmail.com</a>
+                        <a href="+251978787960">+251978787960</a>
+                        <a href="+251960306801">+251960306801</a>
+                        <a href="https://gimnifyapp@gmail.com">gimnifyapp@gmail.com</a>
                         <a href="">Addis Ababa, Ethiopia</a>
                     </div>
                 </div>
