--- a/pages/Dashboard.html
+++ b/pages/Dashboard.html
@@ -241,7 +241,7 @@
                                 <th>Blood Type</th>
                                 <th>Registered</th>
                                 <th>Health Status</th>
-                                <th>Time on Gym</th>
+                                <th>Goal</th>
                                 <th></th>
                             </tr>
                         </thead>
