--- a/pages/payment.user.html
+++ b/pages/payment.user.html
@@ -15,7 +15,7 @@
 <body> 
     <div class="main-container">
         <nav>
-            <div class="logo_top">Gymnify</div>
+            <div class="logo_top"> <img src="../images/Gymnify_transparent_white_only_logo.png" alt=""> Gymnify</div>
             <div class="nav_items">
                 <a href="./Dashboard.html"><span><i class="fa fa-chart-line"></i></span><p>Dashboard</p></a>
                 <a href="./notification.user.html"><span><i class="fa fa-bell"></i><div class="notification_red"></div></span><p>Notifications</p></a>
@@ -39,7 +39,7 @@
                     <p>Your Most Recent Bill</p>
                     <p class="last_pay">Loading last payment date...</p>
                 </div>
-                <div class="txt-4"><i class="fa fa-inbox"></i> <span class="subscription-duration">Loading duration...</span> of <br> Subscription-</div>
+                <div class="txt-4"><i class="fa fa-inbox"></i> <span class="subscription-duration">Loading duration...</span> of Subscription-</div>
             </div>
             <div class="part_c">
                 <div class="txt-5">For Paying The Bill Scan The Following QR-Code</div>
