--- a/pages/signUp_darkMood.user.html
+++ b/pages/signUp_darkMood.user.html
@@ -89,11 +89,10 @@
         if (response.ok) {
             window.open('login.html', '_self')
         } else {
-            alert(`Error: ${result.error}`);
+            console.log(`Error: ${result.error}`);
         }
     } catch (error) {
         console.error('Error submitting form:', error);
-        alert('An unexpected error occurred. Please try again.');
     }
 });
 
